manifest/templates/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: briefer-api-ingress-host
  namespace: briefer
spec:
  ingressClassName: traefik 
  rules:
  - host: api.localhost 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: briefer-api-service
            port:
              number: 8080
